edit - close main

--- a/public/index.html
+++ b/public/index.html
@@ -84,10 +84,10 @@
                     <tr align="center">
                          <td>
                               <div class="GpioContainer" >
-                                   <strong>GPIO26</strong>
+                                   <strong>LED 1</strong>
                                    <br>
                                    <label class="switch">
-                                   <input type="checkbox" id="GPIO26">
+                                   <input type="checkbox" id="GPIO6">
                                    <span class="slider round"></span>
                                    </label>	
                               </div>
@@ -95,10 +95,10 @@
 
                          <td>
                               <div class="GpioContainer">
-                                   <strong>GPIO20</strong>
+                                   <strong>LED 2</strong>
                                    <br>
                                    <label class="switch">
-                                   <input type="checkbox" id="GPIO20">
+                                   <input type="checkbox" id="GPIO13">
                                    <span class="slider round"></span>
                                    </label>	
                               </div>
@@ -106,10 +106,10 @@
 
                          <td>
                               <div class="GpioContainer">
-                                   <strong>GPIO21</strong>
+                                   <strong>LED 3</strong>
                                    <br>
                                    <label class="switch">
-                                   <input type="checkbox" id="GPIO21">
+                                   <input type="checkbox" id="GPIO22">
                                    <span class="slider round"></span>
                                    </label>	
                               </div>
@@ -117,10 +117,10 @@
 
                          <td>
                               <div class="GpioContainer">
-                                   <strong>GPIO16</strong>
+                                   <strong>LED 4</strong>
                                    <br>
                                    <label class="switch">
-                                   <input type="checkbox" id="GPIO16">
+                                   <input type="checkbox" id="GPIO27">
                                    <span class="slider round"></span>
                                    </label>	
                               </div>
