add file - close

--- a/public/index.html
+++ b/public/index.html
@@ -67,6 +67,7 @@
           border-radius: 50%;
      }
      body {
+          align-content: center;
           background: url(https://png.pngtree.com/thumb_back/fh260/background/20201009/pngtree-light-blue-background-design-image_405678.jpg)no-repeat;
           background-size: cover;
      }
