--- a/public/index.html
+++ b/public/index.html
@@ -74,9 +74,9 @@
         }
 
         body {
-            align-content: center;
-            background: url(https://png.pngtree.com/thumb_back/fh260/background/20201009/pngtree-light-blue-background-design-image_405678.jpg)no-repeat;
-            background-size: cover;
+		background-image: url('https://wallpaperaccess.com/full/38585.jpg');
+              	background-repeat: no-repeat;
+              	background-size: cover;
         }
     </style>        
     </style>
@@ -86,26 +86,26 @@
 <body>
   
 	<div class="rgb py-5 mt-5" style="font-family: PK Krung Thep Medium; margin:auto; width:50%;">
-        <H1 class="text-center mb-3"">Hello User</H1>
+        <H1 class="text-center mb-3 text-uppercase text-muted">LED Controller</H1>
 
         <div class="container" style="display: flex; margin:auto; width: 50%;">
 
             <div class="GpioContainer text-center" style="margin: auto;">
-                <h4 class="mb-3 text-uppercase text-muted">LED 1</h4>
+                <h4 class="mb-2 text-uppercase text-muted">LED 1</h4>
                 <label class="switch">
                 <input type="checkbox" id="GPIO6">
                 <span class="slider round"></span>
             </div>
 
             <div class="GpioContainer text-center" style="margin: auto;">
-                <h4 class="mb-3 text-uppercase text-muted">LED 2</h4>
+                <h4 class="mb-2 text-uppercase text-muted">LED 2</h4>
                 <label class="switch">
                 <input type="checkbox" id="GPIO13">
                 <span class="slider round"></span>
             </div>
 
             <div class="GpioContainer text-center" style="margin: auto;">
-                <h4 class="mb-3 text-uppercase text-muted">LED 3</h4>
+                <h4 class="mb-2 text-uppercase text-muted">LED 3</h4>
                 <label class="switch">
                 <input type="checkbox" id="GPIO22">
                 <span class="slider round"></span>
@@ -119,12 +119,13 @@
             </div>
 
         </div>
+	<div class="container">
+		<a href="http://localhost:3000/" class="btn btn-danger mt-5"
+                    style="display:block; margin-left:auto; margin-right:auto; width:30%;">Back</a>
+	</div>
                <script src="/socket.io/socket.io.js"></script>
                <script src="main.js"></script>
     
   </div>
-    
-  
-
 </body>
 </html> 
