--- a/public/index.html
+++ b/public/index.html
@@ -133,12 +133,14 @@
         <div style="display: flex; justify-content: center; margin-bottom: 10px;">
             <div class="temp">
                 <h5><b>Temperature:</b></h5><br>
-                <h2 style="display: flex; justify-content: center;" class="temp_value"><b>24.5 C</b></h2>
+                <h3 style="display: flex; justify-content: center; font-size: 45px;" class="temp_value"><b>24.5 </b></h3>
+                <h3 style="font-size: 35px; margin-left: 100%; margin-right: 50px;">C</h3>
             </div>
 
             <div class="hum">
                 <h5><b>Humidity:</b></h5><br>
-                <h2 style="display: flex; justify-content: center;" class="hum_value"><b>30.2 %</b></h2>
+                <h3 style="display: flex; justify-content: center; font-size: 45px;" class="hum_value"><b>30.2 </b></h3>
+                <h3 style="font-size: 35px; margin-left: 100%; margin-right: 50px;">%</h3>
             </div>
         </div>
 
