--- a/public/index.html
+++ b/public/index.html
@@ -147,7 +147,7 @@
         <div class="rgb">
 
             <div style="height: 250px; display: grid; align-items: center;">
-                <!-- <H1 class="text-center mb-3 text-uppercase"><b>LED Controller</b></H1> -->
+                <H1 class="text-center mb-3 text-uppercase"><b>ห้อง 101</b></H1>
 
                 <div class="container" style="display: flex; width: 80%;">
 
