--- a/public/index.html
+++ b/public/index.html
@@ -1,139 +1,262 @@
-/************PROCESS DATA TO/FROM Client****************************/
+<!DOCTYPE html>
+<html lang="en">
 
-var socket = io(); //load socket.io-client and connect to the host that serves the page
-window.addEventListener('load', function () {
-    document.addEventListener("mousedown", ReportMouseDown, false);
-    document.addEventListener("input", PwmInput, false);
-});
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="GPIO Project">
+    <title>Rasberry Pi GPIO</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="icon" type="image/png" href="../images/favicon.ico" />
+    <link rel="stylesheet" type="text/css" href="../css/styles.css" />
 
-let curTemp = document.querySelector('.temp_value');
-let curHum = document.querySelector('.hum_value');
-
-socket.on('change_value', data => {
-    curTemp.textContent = data.temp;
-    curHum.textContent = data.hum;
-})
-
-// PWM Process
-
-var slider6 = document.getElementById("PWM6");
-var output6 = document.getElementById("val6");
-socket.on('PWM6T', function (data) {
-    document.getElementById('PWM6').value = data;
-    var slider6 = document.getElementById("PWM6");
-    var output6 = document.getElementById("val6");
-    output6.innerHTML = slider6.value;
-    slider6.oninput = function () {
-        output6.innerHTML = this.value;
-    }
-});
-
-var slider13 = document.getElementById("PWM13");
-var output13 = document.getElementById("val13");
-socket.on('PWM13T', function (data) {
-    document.getElementById('PWM13').value = data;
-    var slider13 = document.getElementById("PWM13");
-    var output13 = document.getElementById("val13");
-    output13.innerHTML = slider13.value;
-    slider13.oninput = function () {
-        output13.innerHTML = this.value;
-    }
-});
-
-var slider22 = document.getElementById("PWM22");
-var output22 = document.getElementById("val22");
-socket.on('PWM22T', function (data) {
-    document.getElementById('PWM22').value = data;
-    var slider22 = document.getElementById("PWM22");
-    var output22 = document.getElementById("val22");
-    output22.innerHTML = slider22.value;
-    slider22.oninput = function () {
-        output22.innerHTML = this.value;
-    }
-});
-
-var slider27 = document.getElementById("PWM27");
-var output27 = document.getElementById("val27");
-socket.on('PWM27T', function (data) {
-    document.getElementById('PWM27').value = data;
-    var slider27 = document.getElementById("PWM27");
-    var output27 = document.getElementById("val27");
-    output27.innerHTML = slider27.value;
-    slider27.oninput = function () {
-        output27.innerHTML = this.value;
-    }
-});
-
-
-
-function PwmInput(e) {
-    if (e.target.id === "PWM6") {
-        socket.emit('PWM6', slider6.value);
-    } else if (e.target.id === "PWM13") {
-        socket.emit('PWM13', slider13.value);
-    } else if (e.target.id === "PWM22") {
-        socket.emit('PWM22', slider22.value);
-    } else if (e.target.id === "PWM27") {
-        socket.emit('PWM27', slider27.value);
-    }
-}
-
-
-// Send GPIO button toggle to server
-socket.on('GPIO6', function (data) {
-    const myJSON = JSON.stringify(data);
-    document.getElementById('GPIO6').checked = data;
-});
-
-socket.on('GPIO13', function (data) {
-    const myJSON = JSON.stringify(data);
-    document.getElementById('GPIO13').checked = data;
-});
-
-socket.on('GPIO22', function (data) {
-    const myJSON = JSON.stringify(data);
-    document.getElementById('GPIO22').checked = data;
-});
-
-socket.on('GPIO27', function (data) {
-    const myJSON = JSON.stringify(data);
-    document.getElementById('GPIO27').checked = data;
-});
-
-// When toggle button is clicked
-function ReportMouseDown(e) {
-    var y = e.target.previousElementSibling;
-    if (y !== null) var x = y.id;
-    if (x !== null) {
-        // Now we know that x is defined, we are good to go.
-        if (x === "GPIO6") {
-            socket.emit("GPIO6T");  // send GPIO button toggle to node.js server
+    <style>
+        .slidecontainer {
+            height: 40px;
+            width: 50%;
+            display: grid;
         }
-        else if (x === "GPIO13") {
-            socket.emit("GPIO13T");  // send GPIO button toggle to node.js server
-        }
-        else if (x === "GPIO22") {
-            socket.emit("GPIO22T");  // send GPIO button toggle to node.js server
-        }
-        else if (x === "GPIO27") {
-            socket.emit("GPIO27T");  // send GPIO button toggle to node.js server
-        }
-    }
 
-    if (e.target.id === "GPIO6M") {
-        socket.emit("GPIO6", 1);
-        document.getElementById('GPIO6').checked = 1;
-    }
-    else if (e.target.id === "GPIO13M") {
-        socket.emit("GPIO13", 1);
-        document.getElementById('GPIO13').checked = 1;
-    }
-    else if (e.target.id === "GPIO22M") {
-        socket.emit("GPIO22", 1);
-        document.getElementById('GPIO22').checked = 1;
-    }
-    else if (e.target.id === "GPIO27M") {
-        socket.emit("GPIO27", 1);
-    }
-}
+        .slider:hover {
+            opacity: 1;
+        }
 
+        .slider {
+            position: absolute;
+            cursor: pointer;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            background-color: #28B463;
+            -webkit-transition: .4s;
+            transition: .4s;
+        }
+
+        .slider:before {
+            position: absolute;
+            content: "";
+            height: 26px;
+            width: 26px;
+            left: 30px;
+            bottom: 4px;
+            background-color: white;
+            -webkit-transition: .4s;
+            transition: .4s;
+        }
+
+        div.rgb {
+            /* background-image: url('https://img.freepik.com/premium-photo/white-painted-wall-illuminated-by-rainbowcolored-light-background-texture_136930-941.jpg?w=1380');
+            background-repeat: no-repeat;
+            background-size: cover; */
+            background: rgba(255, 255, 255, 20%);
+            border-radius: 20px;
+            display: grid;
+            align-items: center;
+            font-family: Bangna New;
+            height: 95%;
+            width: 70%;
+            margin-top: auto;
+            margin-bottom: auto;
+            box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.2);
+        }
+
+        div.box {
+            height: 100%;
+        }
+
+        div.temp {
+            background-image: url('https://i.pinimg.com/564x/09/00/25/09002597e0b423554b8b65a3091a3df8.jpg');
+            background-repeat: no-repeat;
+            background-size: cover;
+            /* background: rgba(255, 255, 255, 30%); */
+            font-family: Bangna New;
+            border-radius: 20px;
+            height: 200px;
+            width: 280px;
+            justify-content: center;
+            margin-right: 20px;
+            padding: 40px;
+            box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.2);
+
+        }
+
+        div.hum {
+            background-image: url('https://i.pinimg.com/originals/e5/3a/7a/e53a7a65820ae72451e36067a9f92f91.jpg');
+            /* background-attachment: fixed; */
+            /* background-position: bottom; */
+            background-repeat: no-repeat;
+            background-size: cover;
+            /* background: rgba(255, 255, 255, 30%); */
+            background-position: right;
+            font-family: Bangna New;
+            border-radius: 20px;
+            height: 200px;
+            width: 280px;
+            justify-content: center;
+            margin-left: 2px;
+            padding: 40px;
+            box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.2);
+
+        }
+
+        .switch {
+            position: relative;
+            display: inline-block;
+            width: 60px;
+            height: 34px;
+        }
+
+        .switch input {
+            opacity: 0;
+            width: 0;
+            height: 0;
+        }
+
+
+        input:checked+.slider {
+            background-color: #ccc;
+        }
+
+        input:focus+.slider {
+            box-shadow: 0 0 1px #ccc;
+        }
+
+        input:checked+.slider:before {
+            -webkit-transform: translateX(-26px);
+            -ms-transform: translateX(-26px);
+            transform: translateX(-26px);
+        }
+
+        .slider.round {
+            border-radius: 34px;
+        }
+
+        .slider.round:before {
+            border-radius: 50%;
+        }
+
+        body {
+            background-image: url('https://img.freepik.com/premium-photo/abstract-blur-pastel-colour_66899-257.jpg?w=996');
+            background-repeat: no-repeat;
+            background-size: cover;
+            display: flex;
+            justify-content: center;
+            height: 700px;
+
+            hr.solid {
+                border-top: 3px solid #bbb;
+            }
+        }
+    </style>
+
+</head>
+
+<body>
+
+    <div class="rgb">
+        <H1 class="text-center mb-3 text-uppercase"><b>ห้อง A15</b></H1>
+
+        <div style=" display: flex; align-items: center;">
+            <div class="container" style="display: grid; width: 100%;">
+                <div style="display: flex; align-items: center; height: 100px;">
+                    <div class="GpioContainer text-center" style="margin-left: 20%; margin-right: 50px;">
+                        <h4 class="text-uppercase"><b>LED 1</b></h4>
+                        <label class="switch">
+                            <input type="checkbox" id="GPIO6">
+                            <span class="slider round"></span>
+                    </div>
+
+                    <div class="slidecontainer">
+                        <input type="range" min="0" max="100" id="PWM6" style="margin-top: auto;">
+                        <b>Value: <span id="val6"></span></b>
+                    </div>
+                </div>
+
+                <hr class="solid" style="margin-left: 10%;">
+
+                <div style="display: flex; align-items: center; height: 100px;">
+                    <div class="GpioContainer text-center" style="margin-left: 20%; margin-right: 50px;">
+                        <h4 class="mb-2 text-uppercase"><b>LED 2</b></h4>
+                        <label class="switch">
+                            <input type="checkbox" id="GPIO13">
+                            <span class="slider round"></span>
+                    </div>
+
+                    <div class="slidecontainer">
+                        <input type="range" min="0" max="100" id="PWM13" style="margin-top: auto;">
+                        <b>Value: <span id="val13"></span></b>
+                    </div>
+
+                </div>
+
+                <hr class="solid" style="margin-left: 10%;">
+
+                <div style="display: flex; align-items: center; height: 100px;">
+                    <div class="GpioContainer text-center" style="margin-left: 20%; margin-right: 50px;">
+                        <h4 class="mb-2 text-uppercase"><b>LED 3</b></h4>
+                        <label class="switch">
+                            <input type="checkbox" id="GPIO22">
+                            <span class="slider round"></span>
+                    </div>
+
+                    <div class="slidecontainer">
+                        <input type="range" min="0" max="100" id="PWM22" style="margin-top: auto;">
+                        <b>Value: <span id="val22"></span></b>
+                    </div>
+                </div>
+
+                <hr class="solid" style="margin-left: 10%;">
+
+                <div style="display: flex; align-items: center; height: 100px;">
+                    <div class="GpioContainer text-center" style="margin-left: 20%; margin-right: 50px;">
+                        <h4 class="mb-2 text-uppercase"><b>LED 4</b></h4>
+                        <label class="switch">
+                            <input type="checkbox" id="GPIO27">
+                            <span class="slider round"></span>
+                    </div>
+
+                    <div class="slidecontainer">
+                        <input type="range" min="0" max="100" id="PWM27" style="margin-top: auto;">
+                        <b>Value: <span id="val27"></span></b>
+                    </div>
+                </div>
+
+            </div>
+
+
+
+            <div style="display: grid; justify-content: center; margin-left: 20px;">
+                <div class="temp" style="margin-bottom: 15px;">
+                    <h5><b>Temperature:</b></h5><br>
+                    <h3 style="display: flex; justify-content: center; font-size: 45px;" class="temp_value"><b> 00.0
+                        </b>
+                    </h3>
+                    <h3 style="font-size: 35px; margin-left: 100%; margin-right: 50px;">C</h3>
+                </div>
+
+                <div class="hum" style="margin-top: 15px;">
+                    <h5><b>Humidity:</b></h5><br>
+                    <h3 style="display: flex; justify-content: center; font-size: 45px;" class="hum_value"><b> 00.0 </b>
+                    </h3>
+                    <h3 style="font-size: 35px; margin-left: 100%; margin-right: 50px;">%</h3>
+                </div>
+            </div>
+        </div>
+
+        <div class="container">
+            <a href="http://localhost:3000/" class="btn btn-danger "
+                style=" display:block; margin-left:auto; margin-right:auto; width:200px; border-radius: 20px;"><b>BACK</b></a>
+        </div>
+
+        <script src="/socket.io/socket.io.js"></script>
+        <script src="main.js"></script>
+
+    </div>
+
+
+
+</body>
+
+</html>
